# Sentiment-Intelligence-System

./: .gitignore  README.md  api_results.json  api_test_output.txt  cleanup_repo.sh  generate_data.py  mlflow.db  pyproject.toml  requirements-dev.txt  requirements.txt  train.py
.github/workflows/: ci.yml  lint.yml
api/: app.py  predictions_log.csv
dashboard/: index.html
docs/: EXPERIMENT_REPORT.md  POWERBI_DASHBOARD_GUIDE.md
docs/lab/: Lab Practice II -2026 mtech.docx
mlruns/1/029f7105fd084be68059d2755388a1b8/artifacts/reports/: classification_report.txt
mlruns/1/models/m-998cea6341af4342aca7c135ac51bf23/artifacts/: MLmodel  conda.yaml
notebooks/: sentiment_training.ipynb
scripts/: run_api.ps1  run_train.ps1
src/sentiment_intelligence/: config.py  predict.py  preprocessing.py
src/sentiment_intelligence/api/: app.py
tests/: test_api.py  test_predict.py  test_preprocessing.py
